--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 body {
+  background-color: #121212;
   margin: 0;
   padding: 0%;
 }
 
 .App {
-  background-color: #121212;
   color: white;
   height: 100vh;
+  margin-top: 30px;
   text-align: center;
   width: 100vw;
 }
-
