--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,22 @@ body {
   text-align: center;
   width: 100vw;
 }
+#correct {
+  background-color: #528d4e;
+}
+
+#almost {
+  background-color: #b49f39;
+}
+
+#error {
+  background-color: #3a393c;
+}
 
 #big {
   width: 100px;
+}
+
+#disabled {
+  background-color: #3a393c;
 }
